# rayca-demo

./: Cargo.toml  README.md  build.rs  manifest.yaml
.cargo/: config.toml
.github/workflows/: rust.yml
shaders/: depth.frag.slang  depth.frag.spv  gui.frag.slang  gui.frag.spv  gui.vert.spv  line.frag.spv  line.vert.slang  line.vert.spv  line_vertex.slang  main.frag.slang  main.frag.spv  main.vert.slang  main.vert.spv  normal.frag.slang  normal.frag.spv  present.frag.slang  present.frag.spv  present.vert.slang  present.vert.spv  vertex.slang
src/: lib.rs  ui.rs
