[package]
name = "rayca-demo"
version = "0.2.0"
edition = "2024"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
description = "A Rayca demo"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "rayca_demo"

[dependencies]
rayca-core = { git = "https://github.com/Fahien/rayca-core" }
rayca-pipe = { git = "https://github.com/Fahien/rayca-pipe" }
rayca-gltf = { git = "https://github.com/Fahien/rayca-gltf" }
