[package]
name = "rayca-demo"
version = "0.2.0"
edition = "2024"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
description = "A Rayca demo"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "rayca-demo"

[dependencies]
rayca-pipeline = { git = "https://github.com/fahien/rayca-pipeline.git" }
rayca-gui = { git = "https://github.com/fahien/rayca-gui.git" }
